# apriltags2_ethz

./: .gitignore  CMakeLists.txt  vcpkg.json
include/apriltags/: MathUtil.h  TagDetector.h
src/: TagDetector.cc  module.cpp
